--- a/fate.html
+++ b/fate.html
@@ -32,90 +32,130 @@
       overflow: hidden;
     }
 
-    /* 载入帷幕：浓雾完全覆盖，数据就绪后散开并移除 */
+    /* App 主体：加载期完全隐藏，揭幕后渐显 */
+    #app{ opacity: 0; visibility: hidden; transition: opacity 640ms ease; }
+    .app-ready #app{ opacity: 1; visibility: visible; }
+
+    /* 帷幕：实心基底 + 雾彩层 + 勾引文案（完全遮挡） */
     .veil{
-      position: fixed; inset: -10%;
-      z-index: 1000; pointer-events: none; display: grid; place-items: center;
-      background: radial-gradient(80% 80% at 50% 50%, rgba(20,22,34,0.2), rgba(10,12,20,0.75) 50%, rgba(5,6,12,0.92));
+      position: fixed; inset: 0; z-index: 1000; pointer-events: none;
     }
-    .veil .fog{
-      position: absolute; width: 72vw; height: 165vh; filter: blur(36px) saturate(120%);
-      opacity: .96; mix-blend-mode: screen;
+    .veil__base{
+      position: absolute; inset: 0;
+      background: #05060c radial-gradient(90% 90% at 50% 50%, #0b0d15 0%, #070910 55%, #05060c 100%);
+      opacity: 1; transition: opacity 1200ms ease;
+    }
+    .veil__fog{
+      position: absolute; inset: -8%;
+      display: grid; place-items: center; overflow: hidden;
+    }
+    .fog{
+      position: absolute; width: 74vw; height: 170vh; filter: blur(38px) saturate(120%);
+      opacity: .98;
       background:
-        radial-gradient(40% 60% at 30% 30%, rgba(255,115,156,0.28), transparent 60%),
-        radial-gradient(40% 60% at 70% 70%, rgba(107,154,255,0.26), transparent 60%);
+        radial-gradient(42% 60% at 30% 30%, rgba(255,115,156,0.30), transparent 62%),
+        radial-gradient(42% 60% at 70% 70%, rgba(107,154,255,0.28), transparent 62%);
     }
-    .veil .fog.l{ transform: translate3d(-8%, 6%, 0) rotate(-26deg); }
-    .veil .fog.r{
+    .fog.l{ transform: translate3d(-8%, 6%, 0) rotate(-26deg); }
+    .fog.r{
       transform: translate3d(8%, -6%, 0) rotate(26deg);
       background:
-        radial-gradient(40% 60% at 70% 30%, rgba(107,154,255,0.28), transparent 60%),
-        radial-gradient(40% 60% at 30% 70%, rgba(143,255,221,0.24), transparent 60%);
-    }
-    .veil.disperse .fog.l{ animation: disperseL 1.8s ease forwards; }
-    .veil.disperse .fog.r{ animation: disperseR 1.8s ease forwards; }
-    @keyframes disperseL{
-      0% { opacity:.96; transform: translate3d(-8%,6%,0) rotate(-26deg) scale(1.05) }
-      100%{ opacity:0;  transform: translate3d(-60%,-25%,0) rotate(-30deg) scale(1.08) }
-    }
-    @keyframes disperseR{
-      0% { opacity:.96; transform: translate3d(8%,-6%,0) rotate(26deg) scale(1.05) }
-      100%{ opacity:0;  transform: translate3d(60%,25%,0) rotate(30deg) scale(1.08) }
+        radial-gradient(42% 60% at 70% 30%, rgba(107,154,255,0.30), transparent 62%),
+        radial-gradient(42% 60% at 30% 70%, rgba(143,255,221,0.26), transparent 62%);
     }
 
-    /* 抽题时全屏眩晕（无文字，仅视觉覆盖 3s） */
-    .vortex{
+    .tease{
+      position: absolute; left: 50%; top: 58%; transform: translate(-50%,-50%) translateY(8px);
+      padding: 14px 22px; text-align: center;
+      font-size: clamp(18px, 3.2vw, 28px); letter-spacing: .06em;
+      filter: drop-shadow(0 2px 10px rgba(0,0,0,.35)); opacity: 0;
+      animation: teaseIn 1000ms ease 400ms forwards;
+      pointer-events: none; white-space: nowrap;
+    }
+    .tease .shimmer{
+      background: linear-gradient(90deg,
+        rgba(255,255,255,0.9),
+        rgba(199,125,255,0.95) 45%,
+        rgba(125,225,255,0.95) 70%,
+        rgba(255,255,255,0.88) 95%) no-repeat;
+      background-size: 200% 100%;
+      -webkit-background-clip: text; background-clip: text; color: transparent;
+      animation: shimmer 3.6s ease-in-out infinite;
+      text-shadow: 0 1px 0 rgba(0,0,0,0.25);
+    }
+    .tease::after{
+      content:""; display:block; height: 1px; width: 0%;
+      margin: 10px auto 0;
+      background: linear-gradient(90deg, rgba(199,125,255,0.7), rgba(125,225,255,0.7));
+      border-radius: 1px; opacity: .9;
+      animation: underline 1100ms ease 800ms forwards;
+    }
+    @keyframes teaseIn{ to{ opacity:1; transform: translate(-50%,-50%) translateY(0) } }
+    @keyframes shimmer{ 0%,100%{ background-position: 0% 50% } 50%{ background-position: 100% 50% } }
+    @keyframes underline{ to{ width: 64% } }
+
+    /* 散雾序列（更长）：左右掀开 + 基底淡出（结束后彻底移除） */
+    .veil.disperse .fog.l{ animation: disperseL 1800ms ease forwards; }
+    .veil.disperse .fog.r{ animation: disperseR 1800ms ease forwards; }
+    .veil.disperse .tease{ animation: teaseOut 800ms ease forwards; }
+    .veil.disperse .veil__base{ opacity: 0; }
+    @keyframes teaseOut{ to{ opacity:0; transform: translate(-50%,-50%) translateY(-8px) } }
+    @keyframes disperseL{
+      0% { opacity:.98; transform: translate3d(-8%,6%,0) rotate(-26deg) scale(1.02) }
+      100%{ opacity:0;  transform: translate3d(-60%,-24%,0) rotate(-30deg) scale(1.06) }
+    }
+    @keyframes disperseR{
+      0% { opacity:.98; transform: translate3d(8%,-6%,0) rotate(26deg) scale(1.02) }
+      100%{ opacity:0;  transform: translate3d(60%,24%,0) rotate(30deg) scale(1.06) }
+    }
+
+    /* 抽题：丝绸掠影（保留优雅神秘） */
+    .silk{
       position: fixed; inset: 0; z-index: 900; pointer-events: none;
-      opacity: 0; transform: scale(1);
+      opacity: 0;
     }
-    .vortex.show{
-      animation: vortexFade 3s ease forwards;
+    .silk.show{ animation: silkFade 1900ms ease forwards; }
+    @keyframes silkFade{
+      0%   { opacity: 0 }
+      12%  { opacity: .95 }
+      70%  { opacity: .9 }
+      100% { opacity: 0 }
     }
-    /* 旋转放射条 */
-    .vortex::before{
-      content:""; position: absolute; inset: -25%;
+    .silk::before{
+      content:""; position: absolute; inset: -20%;
       background:
-        conic-gradient(from 0turn,
-          rgba(255,255,255,0.06) 0deg, rgba(255,255,255,0.0) 12deg,
-          rgba(255,255,255,0.06) 24deg, rgba(255,255,255,0.0) 36deg,
-          rgba(255,255,255,0.06) 48deg, rgba(255,255,255,0.0) 60deg,
-          rgba(255,255,255,0.06) 72deg, rgba(255,255,255,0.0) 84deg,
-          rgba(255,255,255,0.06) 96deg, rgba(255,255,255,0.0) 108deg,
-          rgba(255,255,255,0.06) 120deg, rgba(255,255,255,0.0) 132deg,
-          rgba(255,255,255,0.06) 144deg, rgba(255,255,255,0.0) 156deg,
-          rgba(255,255,255,0.06) 168deg, rgba(255,255,255,0.0) 180deg,
-          rgba(255,255,255,0.06) 192deg, rgba(255,255,255,0.0) 204deg,
-          rgba(255,255,255,0.06) 216deg, rgba(255,255,255,0.0) 228deg,
-          rgba(255,255,255,0.06) 240deg, rgba(255,255,255,0.0) 252deg,
-          rgba(255,255,255,0.06) 264deg, rgba(255,255,255,0.0) 276deg,
-          rgba(255,255,255,0.06) 288deg, rgba(255,255,255,0.0) 300deg,
-          rgba(255,255,255,0.06) 312deg, rgba(255,255,255,0.0) 324deg,
-          rgba(255,255,255,0.06) 336deg, rgba(255,255,255,0.0) 348deg
-        );
-      filter: blur(10px) saturate(140%);
-      border-radius: 50%;
-      opacity: 0.85;
+        radial-gradient(60% 40% at 20% 30%, rgba(199,125,255,0.20), transparent 65%),
+        radial-gradient(50% 35% at 80% 70%, rgba(125,225,255,0.18), transparent 65%),
+        radial-gradient(40% 25% at 50% 50%, rgba(255,255,255,0.06), transparent 70%);
+      filter: blur(18px) saturate(130%);
+      transform: translate3d(0,0,0);
+      animation: silkDrift 1900ms ease forwards;
     }
-    /* 暗角与中心微光 */
-    .vortex::after{
-      content:""; position: absolute; inset: 0;
+    @keyframes silkDrift{
+      0%   { transform: translate3d(0,0,0) scale(1) }
+      50%  { transform: translate3d(-2%,1.5%,0) scale(1.02) }
+      100% { transform: translate3d(3%,-1%,0) scale(1.04) }
+    }
+    .silk::after{
+      content:""; position: absolute; inset: -10%;
       background:
-        radial-gradient(60% 60% at 50% 50%, rgba(255,255,255,0.06), rgba(255,255,255,0) 35%),
-        radial-gradient(120% 120% at 50% 50%, rgba(0,0,0,0) 40%, rgba(0,0,0,0.45) 75%, rgba(0,0,0,0.65) 100%);
-      mix-blend-mode: normal;
+        conic-gradient(from 200deg at 45% 55%,
+          rgba(255,255,255,0) 0deg,
+          rgba(255,255,255,0.08) 20deg,
+          rgba(199,125,255,0.14) 32deg,
+          rgba(125,225,255,0.14) 44deg,
+          rgba(255,255,255,0.06) 58deg,
+          rgba(255,255,255,0) 80deg);
+      filter: blur(16px);
+      transform: rotate(-6deg) scale(1.02);
+      animation: crescent 1900ms cubic-bezier(.25,.85,.3,1) forwards;
+      mix-blend-mode: screen;
     }
-    @keyframes vortexFade{
-      0%   { opacity: 0; transform: scale(1) rotate(0deg) }
-      10%  { opacity: .95 }
-      60%  { opacity: .92 }
-      100% { opacity: 0; transform: scale(1.06) rotate(360deg) }
-    }
-    /* 让放射条也旋转缩放（继承容器动画的同时轻微相反向） */
-    .vortex.show::before{ animation: spinZoom 3s cubic-bezier(.2,.9,.2,1) forwards; }
-    @keyframes spinZoom{
-      0%   { transform: rotate(0deg) scale(1) }
-      50%  { transform: rotate(-180deg) scale(1.04) }
-      100% { transform: rotate(-360deg) scale(1.08) }
+    @keyframes crescent{
+      0%   { transform: translateX(-8%) rotate(-6deg) scale(1.02); opacity:.0 }
+      22%  { opacity:.9 }
+      60%  { transform: translateX(6%) rotate(-2deg) scale(1.04); opacity:.92 }
+      100% { transform: translateX(12%) rotate(0deg)  scale(1.05); opacity:.0 }
     }
 
     /* 返回（更隐蔽） */
@@ -157,39 +197,7 @@
         0 30px 80px rgba(0,0,0,0.45),
         0 20px 60px rgba(72, 28, 120, 0.25);
       isolation: isolate; overflow: hidden;
-    }
-    .card::before, .card::after{
-      content:""; position: absolute; inset: -40%;
-      background:
-        radial-gradient(35% 20% at 20% 40%, rgba(var(--glow),0.06), transparent 60%),
-        radial-gradient(30% 25% at 80% 60%, rgba(125, 225, 255, 0.06), transparent 60%);
-      filter: blur(50px); transform: rotate(12deg);
-      animation: drift 18s ease-in-out infinite; pointer-events: none;
-    }
-    .card::after{ animation-duration: 26s; animation-direction: reverse; opacity: 0.7; }
-    @keyframes drift{
-      0%,100%{ transform: translate3d(0,0,0) rotate(12deg) }
-      50%{ transform: translate3d(-2%,1.2%,0) rotate(10deg) }
-    }
-
-    .q{
-      position: relative; font-size: clamp(20px, 3.4vw, 40px);
-      line-height: 1.38; letter-spacing: 0.02em; color: var(--ink);
-      text-wrap: balance; text-shadow: 0 1px 0 rgba(0,0,0,0.35), 0 10px 30px rgba(0,0,0,0.25);
-      min-height: 2.8em; display: flex; align-items: center;
-      transition: filter .4s ease, opacity .4s ease;
-    }
-    .q.dim{ color: var(--ink-dim); filter: blur(1px); opacity: .9; }
-    .q.obscured{ filter: blur(6px); opacity: .2; }
-
-    .card.tremor{ animation: tremor 360ms cubic-bezier(.2,.9,.25,1.1); }
-    @keyframes tremor{
-      0% { transform: translateX(0) }
-      20%{ transform: translateX(-1px) }
-      40%{ transform: translateX(1px) }
-      60%{ transform: translateX(-0.6px) }
-      80%{ transform: translateX(0.6px) }
-      100%{ transform: translateX(0) }
+      transition: transform 320ms cubic-bezier(.2,.9,.25,1);
     }
     .card.glow{
       box-shadow:
@@ -200,6 +208,25 @@
         0 0 120px rgba(125,225,255,0.14);
       transition: box-shadow 560ms ease;
     }
+    .card.tremor{ animation: tremor 360ms cubic-bezier(.2,.9,.25,1.1); }
+    @keyframes tremor{
+      0% { transform: translateX(0) }
+      20%{ transform: translateX(-1px) }
+      40%{ transform: translateX(1px) }
+      60%{ transform: translateX(-0.6px) }
+      80%{ transform: translateX(0.6px) }
+      100%{ transform: translateX(0) }
+    }
+
+    .q{
+      position: relative; font-size: clamp(20px, 3.4vw, 40px);
+      line-height: 1.38; letter-spacing: 0.02em; color: var(--ink);
+      text-wrap: balance; text-shadow: 0 1px 0 rgba(0,0,0,0.35), 0 10px 30px rgba(0,0,0,0.25);
+      min-height: 2.8em; display: flex; align-items: center;
+      transition: filter .3s ease, opacity .3s ease;
+    }
+    .q.dim{ color: var(--ink-dim); filter: blur(1px); opacity: .9; }
+    .q.obscured{ filter: blur(6px); opacity: .2; }
 
     /* 底部符印按钮 */
     .sigil-wrap{
@@ -244,46 +271,51 @@
 </head>
 <body>
 
-  <!-- 载入：浓雾完全覆盖，数据就绪后散开并移除 -->
+  <!-- 帷幕：加载期完全遮挡 -->
   <div class="veil" id="veil" aria-hidden="true">
-    <div class="fog l"></div>
-    <div class="fog r"></div>
+    <div class="veil__base"></div>
+    <div class="veil__fog">
+      <div class="fog l"></div>
+      <div class="fog r"></div>
+      <div class="tease">
+        <span class="shimmer">命运不催，只看你愿不愿被牵引。</span>
+      </div>
+    </div>
   </div>
 
-  <!-- 抽题：全屏眩晕特效容器（隐藏，触发时显示） -->
-  <div class="vortex" id="vortex" aria-hidden="true"></div>
+  <!-- 抽题“丝绸掠影” -->
+  <div class="silk" id="silk" aria-hidden="true"></div>
 
-  <!-- 更隐蔽返回 -->
-  <a class="home" href="index.html" aria-label="返回主页">
-    <i class="arrow" aria-hidden="true"></i>
-    <span class="sr-only">返回</span>
-  </a>
+  <!-- App 主体（加载时完全隐藏） -->
+  <div id="app">
+    <a class="home" href="index.html" aria-label="返回主页">
+      <i class="arrow" aria-hidden="true"></i>
+      <span class="sr-only">返回</span>
+    </a>
 
-  <!-- 舞台 -->
-  <main class="stage" aria-live="polite">
-    <article class="card" id="card">
-      <div class="q dim" id="q">触碰符印，命运会揭示一个问题或挑战。</div>
-    </article>
-  </main>
+    <main class="stage" aria-live="polite">
+      <article class="card" id="card">
+        <div class="q dim" id="q">若你愿与命运交换一息，它将赐你答案。</div>
+      </article>
+    </main>
 
-  <!-- 符印按钮 -->
-  <div class="sigil-wrap">
-    <button class="sigil" id="sigil" aria-label="抽取命运">
-      <svg viewBox="0 0 100 100" aria-hidden="true">
-        <defs>
-          <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
-            <stop offset="0%" stop-color="#C77DFF"/>
-            <stop offset="100%" stop-color="#7DE1FF"/>
-          </linearGradient>
-        </defs>
-        <circle cx="50" cy="50" r="34" fill="none" stroke="url(#g)" stroke-width="1.5" class="ring"/>
-        <circle cx="50" cy="50" r="26" fill="none" stroke="url(#g)" stroke-width="0.8" opacity="0.55"/>
-        <path d="M50 28 L56 50 L50 72 L44 50 Z" fill="none" stroke="url(#g)" stroke-width="0.8" opacity="0.45"/>
-      </svg>
-    </button>
+    <div class="sigil-wrap">
+      <button class="sigil" id="sigil" aria-label="抽取命运">
+        <svg viewBox="0 0 100 100" aria-hidden="true">
+          <defs>
+            <linearGradient id="g" x1="0" y1="0" x2="1" y2="1">
+              <stop offset="0%" stop-color="#C77DFF"/>
+              <stop offset="100%" stop-color="#7DE1FF"/>
+            </linearGradient>
+          </defs>
+          <circle cx="50" cy="50" r="34" fill="none" stroke="url(#g)" stroke-width="1.5" class="ring"/>
+          <circle cx="50" cy="50" r="26" fill="none" stroke="url(#g)" stroke-width="0.8" opacity="0.55"/>
+          <path d="M50 28 L56 50 L50 72 L44 50 Z" fill="none" stroke="url(#g)" stroke-width="0.8" opacity="0.45"/>
+        </svg>
+      </button>
+    </div>
   </div>
 
-  <!-- 业务脚本（模块化，直连 Firebase Realtime Database） -->
   <script type="module">
     // —— Firebase —— //
     import { initializeApp } from "https://www.gstatic.com/firebasejs/12.1.0/firebase-app.js";
@@ -303,18 +335,17 @@
 
     const app = initializeApp(firebaseConfig);
     try { getAnalytics(app); } catch {}
-
     const db = getDatabase(app);
 
-    // —— DOM 快捷 —— //
+    // —— DOM —— //
     const $ = (s, p=document) => p.querySelector(s);
     const veil = $('#veil');
-    const vortex = $('#vortex');
+    const silk = $('#silk');
     const qEl = $('#q');
     const cardEl = $('#card');
     const sigilEl = $('#sigil');
 
-    // —— 小工具 —— //
+    // —— 工具 —— //
     const vibe = (pattern) => { try{ navigator.vibrate && navigator.vibrate(pattern); }catch{} };
     const randIndex = (len) => {
       if (crypto?.getRandomValues) { const a = new Uint32Array(1); crypto.getRandomValues(a); return a[0] % len; }
@@ -343,7 +374,7 @@
       requestAnimationFrame(tick);
     }
 
-    // —— 数据拉取与扁平 —— //
+    // —— 数据 —— //
     async function fetchCategory(path){
       const snap = await get(ref(db, path));
       if (!snap.exists()) return [];
@@ -367,7 +398,7 @@
       return { truth: truthU, dare: dareU, all: [...new Set([...truthU, ...dareU])] };
     }
 
-    // —— 载入帷幕：数据就绪后散开并移除（页面不再出现任何雾层） —— //
+    // —— 揭幕时序（时长拉长）：不泄露 → 平滑揭开 → 干净收场 —— //
     let DATA = { truth: [], dare: [], all: [] };
     const mode = new URLSearchParams(location.search).get('mode')?.toLowerCase();
     const MODE = (mode === 'truth' || mode === 'dare') ? mode : 'all';
@@ -378,13 +409,27 @@
     })();
 
     (async () => {
-      const minWait = new Promise(res => setTimeout(res, 1200)); // 保留一点期待
-      const maxWait = new Promise(res => setTimeout(res, 2600));
+      // 可调参数：加载撩拨时长（建议 1.6–2.2s），最大等待（建议 3.6–4.2s）
+      const minWait = new Promise(res => setTimeout(res, 1600));  // 撩拨停顿
+      const maxWait = new Promise(res => setTimeout(res, 3600));  // 上限控制
       await minWait;
       await Promise.race([dataReady, maxWait]);
+
+      // 散雾：左右掀开 + 基底淡出
       veil.classList.add('disperse');
-      setTimeout(()=> veil.remove(), 1900);
-      setTimeout(()=> { cardEl.classList.add('glow'); setTimeout(()=> cardEl.classList.remove('glow'), 1100); }, 600);
+
+      // 预热微光（仍被帷幕遮挡）
+      setTimeout(()=> {
+        cardEl.classList.add('glow');
+        setTimeout(()=> cardEl.classList.remove('glow'), 1100);
+      }, 520);
+
+      // 收场：彻底移除雾层，显露清晰内容，并移除任何朦胧
+      setTimeout(() => {
+        veil.remove();
+        document.documentElement.classList.add('app-ready');
+        qEl.classList.remove('dim'); // 去掉朦胧文本，避免“还在加载”的错觉
+      }, 1850); // 与 disperse 动画 1.8s 对齐，确保雾完全消失
     })();
 
     // —— 使用记录（避免重复） —— //
@@ -406,18 +451,17 @@
       return choice;
     }
 
-    // —— 抽题：全屏眩晕 + 3 秒延迟 —— //
-    const DELAY_MS = 3000;
+    // —— 抽题：丝绸掠影 + 轻震 + 渐现文本 —— //
+    const DRAW_MS = 1900;
 
-    function runVortex(){
-      vortex.classList.remove('show'); void vortex.offsetWidth; // 重新触发
-      vortex.classList.add('show');
-      vortex.setAttribute('aria-hidden', 'false');
-      // 结束后让屏幕回归清透
+    function runSilk(){
+      silk.classList.remove('show'); void silk.offsetWidth;
+      silk.classList.add('show');
+      silk.setAttribute('aria-hidden', 'false');
       setTimeout(() => {
-        vortex.classList.remove('show');
-        vortex.setAttribute('aria-hidden', 'true');
-      }, DELAY_MS);
+        silk.classList.remove('show');
+        silk.setAttribute('aria-hidden', 'true');
+      }, DRAW_MS);
     }
 
     function draw(){
@@ -426,22 +470,20 @@
         qEl.textContent = '题库还没就位，稍后再触碰我。';
         return;
       }
-
       sigilEl.classList.add('loading');
       qEl.classList.add('obscured');
-      vibe([18, 90, 18]);
+      try{ navigator.vibrate && navigator.vibrate([18, 90, 18]); }catch{}
 
-      runVortex();
+      runSilk();
 
       setTimeout(() => {
-        vibe([1, 45, 26, 50, 10]);
+        try{ navigator.vibrate && navigator.vibrate([1, 45, 26, 50, 10]); }catch{}
         cardEl.classList.remove('tremor','glow'); void cardEl.offsetWidth;
         cardEl.classList.add('tremor','glow');
-        revealText(qEl, choice, 1700);
+        revealText(qEl, choice, 1500);
         qEl.classList.remove('obscured');
-
-        setTimeout(()=> sigilEl.classList.remove('loading'), 520);
-      }, DELAY_MS);
+        setTimeout(()=> sigilEl.classList.remove('loading'), 480);
+      }, DRAW_MS - 400);
     }
 
     sigilEl.addEventListener('click', draw, { passive: true });
@@ -458,6 +500,7 @@
     dataReady.finally(() => {
       if (!(DATA[MODE] && DATA[MODE].length)) {
         qEl.textContent = '题库似乎还在路上，点符印再试一次。';
+        qEl.classList.remove('dim'); // 失败时也保证清晰
       }
     });
   </script>
